# Generated by Django 6.0.6 on 2026-06-26 06:56

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('productos', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Categoria',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('_created_at', models.DateTimeField(auto_now_add=True, db_column='created_at')),
                ('_updated_at', models.DateTimeField(auto_now=True, db_column='updated_at')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField(blank=True, null=True)),
            ],
            options={
                'verbose_name_plural': 'Categorias',
            },
        ),
        migrations.CreateModel(
            name='Catalogo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('_created_at', models.DateTimeField(auto_now_add=True, db_column='created_at')),
                ('_updated_at', models.DateTimeField(auto_now=True, db_column='updated_at')),
                ('nombre', models.CharField(max_length=100)),
                ('activo', models.BooleanField(default=True)),
                ('producto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='catalogos', to='productos.producto')),
                ('categoria', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='catalogos', to='catalogo.categoria')),
            ],
            options={
                'verbose_name_plural': 'Catalogos',
            },
        ),
    ]
